# go-fish

./: .gitignore  pyproject.toml
src/go_fish/: __init__.py  logging.py  models.py  openai.py  settings.py
tests/: conftest.py  test_models.py  test_openai.py
